# qwen-aligner-rs

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  handoff.md
bench_outputs/: candle_baseline_en.json  candle_baseline_ja.json  smoke_en.json  tri_lang_jobs.jsonl
bench_outputs/batch/: zh.json
bench_outputs/loop/: ja.json
docs/: ALIGNMENT_HANDOFF.md
ptx/: MANIFEST.txt  kernels_sm61.ptx  kernels_sm70.ptx  kernels_sm75.ptx  kernels_sm80.ptx  kernels_sm86.ptx  kernels_sm89.ptx  kernels_sm90.ptx
scripts/: compile-ptx.ps1
src/: audio_io.rs  backend.rs  batch.rs  config.rs  cpu_engine.rs  cudarc_engine.rs  decoder.rs  encoder.rs  error.rs  gpu_audio_encoder.rs  inference.rs  lib.rs  main.rs  mel.rs  prebuilt_ptx.rs  prompt.rs  raw_tensor.rs  resampler.rs  text.rs  text_io.rs  timestamp.rs  tokenizer.rs  weight.rs  weights.rs
src/kernels/: kernels.cu
tests/fixtures/: 15s.txt
