[package]
name = "qwen-aligner-rs"
version = "0.1.0"
edition = "2021"
description = "Qwen3 forced aligner in Rust — cudarc CUDA backend with hand-written fused kernels."

[[bin]]
name = "qwen-aligner"
path = "src/main.rs"

[dependencies]
# Direct CUDA driver bindings + cuBLAS + NVRTC.  All matmul/softmax/rmsnorm/
# rotary/attention etc. is implemented either via cuBLAS HGEMM or via the
# hand-written kernels in src/kernels/kernels.cu (NVRTC-compiled at runtime).
# No deep-learning framework (burn / candle / tch) is on the inference path.
cudarc = { version = "0.19.7", features = ["cublas", "f16", "nvrtc", "cuda-12080"] }
half = "2"
tokenizers = { version = "0.22", features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"
rustfft = "6"
anyhow = "1"
safetensors = "0.4"
clap = { version = "4", features = ["derive"] }
lindera = { version = "3.0.7", default-features = false, features = ["embed-ipadic"] }
log = "0.4"
env_logger = "0.11"
